# cppbackend

./: .gitignore
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/: CMakeLists.txt
sprint1/problems/seabattle/solution/src/: main.cpp  (+1 more)
sprint1/problems/sum/solution/: main
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/samples/tcp-udp/src/: tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/example/boost_log/: CMakeLists.txt
sprint2/example/boost_log/src/: log.cpp
sprint2/example/command_line/: CMakeLists.txt
sprint2/example/command_line/src/: merge.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/game_state/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/logger/solution/: my_logger.cpp  my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile
sprint3/boostTest/: CMakeLists.txt
sprint3/boostTest/src/: leap_year.cpp
sprint3/boostTest/tests/: boost_test_main.cpp
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/instrumentation/builds/: CMakeLists.txt
sprint3/problems/instrumentation/builds/v0/: CMakeLists.txt  gmon.out
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/data/: config.json
sprint4/problems/leave_game/solution/save/: save.txt
sprint4/problems/leave_game/solution/src/: application.h  collision_detector.cpp  constants.h  database.cpp  database.h  json_loader.cpp  json_loader.h  loots.cpp  main.cpp  model.cpp  model.h  player.cpp  player.h  request_handler.h  responce_api.cpp  responce_api.h  serialization.cpp  serialization.h  ticker.cpp  ticker.h
sprint4/problems/leave_game/solution/tests/: collision_detector_tests.cpp
(+101 files in other folders)
